<resources>
    <string name="app_name">eCommerce</string>
    <string name="facebook_app_id">393280345320009</string>
    <string name="fb_login_protocol_scheme">fb393280345320009</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Login_text">Login</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="name_text">Name</string>
    <string name="password_text">Password</string>
    <string name="facebookButtonDescription">Facebook Button</string>
    <string name="googleStringDescription">Google Button</string>
    <string name="or_text">or</string>
    <string name="phone_no_text">Phone no.</string>
    <string name="email_text">Email</string>
    <string name="already_have_an_account">already have an account?</string>
    <string name="does_not_have_an_account">dose not have an account?</string>
</resources>