<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/RedColor"
        tools:context=".ui.login.LoginFragment">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="160dp"
            app:cardCornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/emailForLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="60dp"
                    android:layout_marginEnd="24dp"
                    android:background="@drawable/edittext"
                    android:hint="@string/email_text"
                    style="@style/editText"
                    android:inputType="textEmailAddress"
                    android:paddingStart="20dp"
                    android:paddingEnd="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:importantForAutofill="no" />

                <EditText
                    android:id="@+id/passwordForLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:background="@drawable/edittext"
                    android:ems="10"
                    android:hint="@string/password_text"
                    android:inputType="textPassword"
                    android:paddingStart="20dp"
                    android:paddingEnd="10dp"
                    style="@style/editText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/emailForLogin"
                    android:importantForAutofill="no" />

                <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                    android:id="@+id/LoginButton"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="32dp"
                    android:background="@drawable/login_button"
                    android:fontFamily="@font/open_sans_light"
                    android:text="@string/Login_text"
                    android:textColor="@color/WhiteColor"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/passwordForLogin"
                    app:spinning_bar_width="2dp"
                    app:spinning_bar_color="@color/WhiteColor"
                    app:spinning_bar_padding="4dp"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="115dp"
            app:backgroundTint="@color/WhiteColor"
            app:elevation="2dp"
            app:fabCustomSize="90dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:maxImageSize="100dp"
            app:srcCompat="@drawable/ic_baseline_perm_identity_24" />

        <TextView
            android:id="@+id/loginHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/Login_text"
            android:textColor="@color/WhiteColor"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop="70dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView">

            <ImageView
                android:id="@+id/facebookButtonLogin"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="11dp"
                app:srcCompat="@mipmap/facebool"
                android:contentDescription="@string/facebookButtonDescription" />

            <View
                android:id="@+id/view2"
                android:layout_width="3dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:background="@color/RedColor" />

            <ImageView
                android:id="@+id/googleButtonLogin"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="11dp"
                app:srcCompat="@mipmap/google"
                android:contentDescription="@string/googleStringDescription" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/doesNotHaveAnAccountText"
            style="@style/authText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="65dp"
            android:layout_marginBottom="62dp"
            android:text="@string/does_not_have_an_account"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/signUpNavigation"
            style="@style/authText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="62dp"
            android:text="@string/sign_up_text"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/doesNotHaveAnAccountText" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>